--- a/Chess Engine.vcxproj
+++ b/Chess Engine.vcxproj
@@ -70,6 +70,10 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>C:\Users\dillo\OneDrive\Desktop\SFML-2.6.1\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\dillo\OneDrive\Desktop\SFML-2.6.1\lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -130,7 +134,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>SFML_STATIC;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)Header Files;C:\Users\dbliss-henaghan\OneDrive - Schréder SA\Desktop\SFML-2.6.1\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Header Files;C:\Users\dillo\OneDrive\Desktop\SFML-2.6.1\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -139,29 +143,49 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <Profile>true</Profile>
-      <AdditionalLibraryDirectories>C:\Users\dbliss-henaghan\OneDrive - Schréder SA\Desktop\SFML-2.6.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\dillo\OneDrive\Desktop\SFML-2.6.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-s.lib;sfml-audio-s.lib;sfml-window-s.lib;sfml-system-s.lib;opengl32.lib;freetype.lib;winmm.lib;gdi32.lib;openal32.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <HeapReserveSize>8388608</HeapReserveSize>
+      <StackReserveSize>8388608</StackReserveSize>
+      <HeapCommitSize>40960</HeapCommitSize>
+      <StackCommitSize>40960</StackCommitSize>
+      <ForceFileOutput>Enabled</ForceFileOutput>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Chess Engine.cpp" />
     <ClCompile Include="chess.cpp" />
     <ClCompile Include="BoardDisplay.cpp" />
-    <ClCompile Include="chess2.cpp" />
-    <ClCompile Include="engine.cpp" />
     <ClCompile Include="engine2.cpp" />
     <ClCompile Include="zobrist.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="chess.h" />
+    <Text Include="StartingMoves.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <ClInclude Include="BoardDisplay.h" />
-    <ClInclude Include="chess2.h" />
-    <ClInclude Include="engine.h" />
+    <ClInclude Include="chess.h" />
     <ClInclude Include="engine2.h" />
     <ClInclude Include="zobrist.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="StartingMoves.txt" />
+    <Image Include="..\..\..\Downloads\Chess_bdt60.png" />
+    <Image Include="..\..\..\Downloads\Chess_blt60.png" />
+    <Image Include="..\..\..\Downloads\Chess_kdt60.png" />
+    <Image Include="..\..\..\Downloads\Chess_klt60.png" />
+    <Image Include="..\..\..\Downloads\Chess_ndt60.png" />
+    <Image Include="..\..\..\Downloads\Chess_nlt60.png" />
+    <Image Include="..\..\..\Downloads\Chess_pdt60.png" />
+    <Image Include="..\..\..\Downloads\Chess_plt60.png" />
+    <Image Include="..\..\..\Downloads\Chess_qdt60.png" />
+    <Image Include="..\..\..\Downloads\Chess_qlt60.png" />
+    <Image Include="..\..\..\Downloads\Chess_rdt60.png" />
+    <Image Include="..\..\..\Downloads\Chess_rlt60.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="..\..\..\Downloads\capture.wav" />
+    <Media Include="..\..\..\Downloads\move-check.wav" />
+    <Media Include="..\..\..\Downloads\move-self.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
