--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "C:/Users/dillo/Documents/code/Chess engine"
+    "cmake.sourceDirectory": "C:/Users/dillo/Documents/code/ChessEngine"
 }
