--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "C:/Users/dillo/Documents/code/ChessEngine"
+  "C_Cpp.default.compileCommands": "${workspaceFolder}/build/ninja-msvc-x64/compile_commands.json"
 }
