--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,40 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(ChessEngine
     src/main.cpp
     src/chess.cpp
-    src/engine1.cpp
-    src/engine2.cpp
+    src/engine.cpp
     src/BoardDisplay.cpp
     src/zobrist.cpp
 )
+
+add_executable(PerftSuite
+    src/perft_suite.cpp
+    src/chess.cpp
+    src/zobrist.cpp
+)
+
+add_executable(perft_cli
+    src/perft_cli.cpp
+    src/chess.cpp
+    src/zobrist.cpp
+)
+
+add_executable(EngineTuning
+    src/engine_tuning.cpp
+    src/chess.cpp
+    src/engine.cpp
+    src/BoardDisplay.cpp
+    src/zobrist.cpp
+)
+
+target_link_libraries(EngineTuning PRIVATE
+    SFML::Graphics
+    SFML::Window
+    SFML::System
+    SFML::Audio
+)
+
+target_compile_features(PerftSuite PRIVATE cxx_std_20)
+
 
 find_package(SFML CONFIG REQUIRED COMPONENTS Graphics Window System Audio)
 
